testdata/negative/zb_neg_bad_enum_value.ksy
meta:
  id: zb_neg_bad_enum_value
enums:
  bad:
    not_a_number: foo
seq:
  - id: x
    type: u1
    enum: bad
